# du_cockpit_builder

./: .gitignore  pyproject.toml  slots.json
cockpit_builder/: __init__.py  from_json_to_src.py  from_src_to_json.py  main.py
tests/: from_json_to_src.py  from_src_to_json.py
