[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'du_cockpit_builder'
version = '0.0.1'
description = ''
authors = [
    { name = 'Садовский М.К.', email = 'i@maxim-sadovskiy.ru' }
]
license = { text = 'Apache-2.0' }
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    "watchdog>=2.0.0",
]

[project.urls]
Homepage = 'https://github.com/Sam-Strand/du_cockpit_builder'